add index.html and css files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <title>Calix's Amazing Website</title>
+    <title>
+        Calix's Amazing Website</title>
 </head>
 
 <body>
@@ -18,17 +19,39 @@
             </div>
             <!-- Content section -->
             <div>
-                <h2>Calix</h2>
-                <p>Calix at Chalmette High</p>
+                <h1>
+                    Calix's glorious website
+                </h1>
+                <p>
+                    Calix at chalmette high school
+                </p>
                 <!-- Interests section -->
             </div>
             <h3>Interests</h3>
             <u1>
-                <li>Calculus</li>
-                <li>Basketball</li>
-                <li>Gardening</li>
+                <li>
+                    Calculus
+                </li>
+                <li>
+                    Basketball
+                </li>
+                <li>
+                    Gardening
+                </li>
             </u1>
             <div>
-                <img src="https://github.com/OperationSpark/first-website-hs-beta/blob/master/img/hallebot.png?raw=true"> 
+                <img src="https://images.shiksha.com/mediadata/images/articles/1624902121phpgaLvgH.jpeg">
             </div>
-                
+            <nav>
+                <h2>Calix</h2>
+                <ul>
+                    <li>
+                        <a=href="index.html"> Home</a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html"\>Portfolio
+
+                        </a>
+                    </li>
+                </ul>
+            </nav>
