add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,47 +1,45 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Calix's Amazing Website</title>
 
-    </head>
+<head>
+    <title>Calix's Amazing Website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-    <body> 
-        <!-- Visible HTML elements GO HERE  -->
-        <div> 
-            <nav>
-                <h1>Calix's Glorious Website</h1>
-                <ul>
-                    <li>
-                      <a href="index.html"> Home </a>
-                    </li>
-                    <li>
-                      <a href="portfolio.html"> Portfolio </a>
-                    </li>
-                </ul>
-            </nav>
-    
-            <main>
-    <!-- Sidebar section -->
-            </main>
-        </div>
+<body>
+    <!-- Visible HTML elements GO HERE  -->
+    <div id="all-contents">
+        <nav>
+            <h1>Calix's Glorious Website</h1>
+            <ul id="nav-ul">
+                <li class="nav-li">
+                    <a href="index.html"> Home </a>
+                </li>
+                <li class="nav-li">
+                    <a href="portfolio.html"> portfolio </a>
+                </li>
+            </ul>
+        </nav>
+
+        <main>
+            <!-- Sidebar section -->
+            <div class="sidebar">
+               <img class="sidebar-img" src="https://api.ndla.no/image-api/raw/bok.jpg?width=1024">
+            </div>
+            <!-- Content section -->
+            <div>
+                <h2>Calix</h2>
+                <p>Calix at Chalmette High school</p>
+                <!-- Interests section -->
+                <div id="interests">
+                    <h3>Interests</h3>
+                    <ul>
+                        <li>Calculus</li>
+                        <li>Gardening</li>
+                        <li>Reading</li>
+                    </ul>
+                </div>
+            </div>
+        </main>
     </body>
- <!-- Content section -->
-    <div>
-        <h2>Calix</h2>
-        <p>Calix at Chalmette High school</p>
-<!-- Interests section -->
-
-    </div>
-    <div>
-        <h3>Interests</h3>
-        <ul>
-            <li>Calculus</li>
-            <li>Gardening</li>
-            <li>Reading</li>
-        </ul>
-    </div>
-</div>
-<!-- Sidebar section -->
-<div><img src=https://encrypted-tbn0.gstatic.com/images?
-div>
 </html>
