--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img class="sidebar-img" src="https://api.ndla.no/image-api/raw/bok.jpg?width=1024">
             </div>
             <!-- Content section -->
-            <div>
+            <div class="content">
                 <h2>Calix</h2>
                 <p>Calix at Chalmette High school</p>
                 <!-- Interests section -->
@@ -41,6 +41,7 @@
                 </div>
             </div>
         </main>
+    </div>
 </body>
 
 </html>
