--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,12 @@
         <li class="nav-li">
           <a class="nav-a" href="portfolio.html">Portfolio</a>
         </li>
-        <h2></h2>
-        <ul id="nav-ul">
+      </nav>
+      <main>
+        <div class="content">
+      
+        <h1>Portfolio</h1>
+        <ul id="portfolio">
           <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for
               Halleb0t</a></li>
           <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on
@@ -26,7 +30,8 @@
           <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity
               applied to circle shapes...</a></li>
         </ul>
-    </nav>
+      </div>
+      </main>
   </div>
 </body>
 
