--- a/asd-projects/snake/index.html
+++ b/asd-projects/snake/index.html
@@ -11,8 +11,9 @@
     <div id="board"></div>
 <h1 id="score">Score: 0</h1>
 <h1 id="highScore">High Score: 0</h1>
+<script src="sketch.js"></script>
   </body>
   <script src="index.js"></script>
-  <!-- Link index.js here -->
+ 
   
 </html>
